<resources>
    <string name="app_name">ADDWII</string>
    <string name="app_name_air_map">Air map</string>
    <string name="app_name_knowledge">Knowledge</string>
    <string name="app_name_about">About</string>
    <string name="text_message_air_good">The air quality is normal, please keep it fresh. TVOC is low, no irritation or discomfort risk.</string>
    <string name="text_message_air_mid">The air quality is moderate. Avoid staying in this situation too long (12 months). Improved ventilation is recommended.</string>
    <string name="text_message_air_Medium_Orange">The air quality is high pollution. Avoid staying in this situation too long (1 month). Intensified ventilation is recommended.</string>
    <string name="text_message_air_bad">The air quality is unhealthy. Avoid staying in this situation too long (Within hours). Intensified ventilation is necessary.</string>
    <string name="text_message_air_Serious_Purple">The air quality is harmful. Please leave here. Intensified ventilation is mandatory.</string>
    <string name="text_message_air_Extreme_Dark_Purple">The air quality is hazardous. Please leave here immediately. Intensified ventilation is mandatory.</string>
    <string name="text_message_humidity">Normally, Human feels cool and comfortable when the humidity percent range is about 45%~65%. Your body healthy cannot be afforded by too dry or too moist.</string>
    <string name="text_message_temperature">Normally, the best temperature for human is about 64~77°F(18~25℃)</string>
    <string name="label_eCO2_Green">Normal</string>
    <string name="label_eCO2_Yellow">Moderate</string>
    <string name="label_eCO2_Orange">High</string>
    <string name="label_eCO2_Red">Unhealthy</string>
    <string name="label_eCO2_Purple">Harmful</string>
    <string name="label_eCO2_Brown">Hazardous</string>
    <string name="message_eCO2_Green">The air quality is normal.</string>
    <string name="message_eCO2_Yellow">The air quality is moderate. You may feel uncomfortable. Improved ventilation is recommended.</string>
    <string name="message_eCO2_Orange">The air quality is high pollution. Avoid staying in this situation too long. Intensified ventilation is recommended.</string>
    <string name="message_eCO2_Red">The air quality is unhealthy. Avoid staying in this situation too long. Intensified ventilation is necessary.</string>
    <string name="message_eCO2_Purple">The air quality is harmful. Please leave here. Intensified ventilation is mandatory.</string>
    <string name="message_eCO2_Brown">The air quality is hazardous. Please leave here immediately. Intensified ventilation is mandatory.</string>
    <string name="label_pm25_Green">Normal</string>
    <string name="label_pm25_Yellow">Moderate</string>
    <string name="label_pm25_Orange">High</string>
    <string name="label_pm25_Red">Unhealthy</string>
    <string name="label_pm25_Purple">Harmful</string>
    <string name="label_pm25_Brown">Hazardous</string>
    <string name="message_pm25_Green">The air quality is normal.</string>
    <string name="message_pm25_Yellow">The air quality is moderate.</string>
    <string name="message_pm25_Orange">The air quality is high pollution. Avoid staying in this situation too long. Sensitive people may feel uncomfortable.</string>
    <string name="message_pm25_Red">The air quality is unhealthy. Avoid staying in this situation too long.</string>
    <string name="message_pm25_Purple">The air quality is harmful. Please leave here.</string>
    <string name="message_pm25_Brown">The air quality is hazardous. Please leave here immediately. Stay too long may affect lung function or causing irregular heartbeat.</string>
    <string name="text_label_tvoc">TVOC</string>
    <string name="text_label_pm25">PM2.5</string>
    <string name="text_label_co2">eCO2</string>
    <string name="text_label_temperature">Temp.</string>
    <string name="text_label_humidity">HUMI.</string>
    <string name="text_label_temperature_full">Temperature</string>
    <string name="text_label_humidity_full">Humidity</string>
    <string name="text_second">s</string>
    <string name="text_default_value">----</string>
    <string name="text_label_tvoc_detect">TVOC</string>
    <string name="text_label_pm25_detect">PM2.5</string>
    <string name="text_label_pm10_detect">PM10</string>
    <string name="text_label_eco2_detect">ECO2</string>
    <string name="text_label_temp_detect">TEMP</string>
    <string name="text_label_humi_detect">HUMI</string>
    <string name="text_label_status_good">Normal</string>
    <string name="text_label_status_mid">Moderate</string>
    <string name="text_label_status_medium_Orange">High pollution</string>
    <string name="text_label_status_bad">Unhealthy</string>
    <string name="text_label_status_Serious_Purple">Harmful</string>
    <string name="text_label_status_Extreme_Dark_Purple">Hazardous</string>
    <string name="text_label_temp_Green">Comfortable</string>
    <string name="text_label_temp_Blue">Cold</string>
    <string name="text_label_temp_Red">Hot</string>
    <string name="text_label_Humi_Green">Comfortable</string>
    <string name="text_label_Humi_Blue">Dry</string>
    <string name="text_label_Humi_Red">Wet</string>
    <string name="text_battery_value">Battery Volume: </string>
    <string name="text_battery_title">Device Battery</string>
    <string name="button_label_ok">OK</string>
    <string name="text_drawer_open">OPEN</string>
    <string name="text_drawer_close">CLOSE</string>
    <string name="text_navi_setting">Setting</string>
    <string name="text_navi_about">About APP</string>
    <string name="text_navi_air_map">Air Map</string>
    <string name="text_navi_add_device">Add Device</string>
    <string name="text_navi_getData">Read Data From Device</string>
    <string name="text_drawer_device_name">Device</string>
    <string name="text_navi_knowledge">Knowledge</string>
    <string name="text_navi_accountManagement">Account</string>
    <string name="ble_not_supported">Bluetooth not support.</string>
    <string name="select_device">Select device</string>
    <string name="scanning">Scanning...</string>
    <string name="stopped">Scan Stop</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="text_message_yes">OK</string>
    <string name="text_need_location_permission">Need location permission!</string>
    <string name="text_message_need_permission">Need Permission</string>
    <string name="ADDWII">ADDWII</string>
    <string name="Contact_us">Contact Us</string>
    <string name="Contact_mail">Service Mail</string>
    <string name="show_app_version">APP Version v%s</string>
    <string name="Blue_Tooth">Blue Tooth</string>
    <string name="Broadcast">Broadcast Notification</string>
    <string name="Auto_measure">Auto Detect</string>
    <string name="About_App">About APP</string>
    <string name="Already_Pair">Paired: </string>
    <string name="Already_Connected">Connected</string>
    <string name="No_Device_Connect">No Device Paired</string>
    <string name="UART_Connecting">UART:Connecting</string>
    <string name="UART_Disconnecting">Disconnect</string>
    <string name="Loading_Data">Waiting for Data Loading</string>
    <string name="Total_Data">Number of Data:\t</string>
    <string name="Total_Data_Finish">.</string>
    <string name="Loading_Completely">Loading Completely</string>
    <string name="Number_of_data">Data NO. </string>
    <string name="Loading_fail">Loading Fail</string>
    <string name="text_navi_title_map">Map</string>
    <string name="text_navi_title_help">Help</string>
    <string name="MicroJetWeb">http://www.curiejet.com/zh-tw/about</string>
    <string name="ContactUs">http://www.curiejet.com/zh-tw/contacts</string>
    <string name="CustomerService">http://www.curiejet.com/zh-tw/</string>
    <string name="warning_title_Yellow">Warning!!!</string>
    <string name="warning_title_Orange">Warning!!!</string>
    <string name="warning_title_Red">Emergency!!!</string>
    <string name="warning_title_Purple">Emergency!!!</string>
    <string name="warning_title_Brown">Emergency!!!</string>
    <string name="Medium_warning">Leave the place as quick as you can!!!</string>
    <string name="week_First_Word">week</string>
    <string name="week_Last_Word"> </string>
    <string name="TVOCUnit">ppb</string>
    <string name="frg_tvocRadioButtonHour">即時</string>
    <string name="frg_tvocRadioButtonDay">4hr平均</string>
    <string name="frg_tvocRadioButtonWeek">8hr平均</string>
    <string name="frg_tvocRadioButtonMonth">12hr平均</string>
    <string name="averageExposure_Daily">Average Exposure Level</string>
    <string name="averageExposure_Week">Average Exposure Level</string>
    <string name="averageExposure_Month">Average Exposure Level</string>
    <string name="averageExposure_Year">Average Exposure Level</string>
    <string name="averageTemperature_Daily">Average Temperature</string>
    <string name="averageHumidity_Daily">Average Humidity</string>
    <string name="daily">Average\ \ '</string>
    <string name="weekly">Average\ \ '</string>
    <string name="monthly">Average\ \ '</string>
    <string name="annual">Average\ \ '</string>
    <string name="exposure">Exposure</string>
    <string name="temp">Temperature</string>
    <string name="humi">Humidity</string>
    <string name="text_setting_test_cycle">Choose a detect cycle</string>
    <string name="text_setting_allow_notification">Allow Notification</string>
    <string name="text_setting_notify_message">Info</string>
    <string name="text_setting_notify_viberation">Vibrate</string>
    <string name="text_setting_notify_sound">Sound</string>
    <string name="text_setting_on">On</string>
    <string name="text_setting_off">Off</string>
    <string name="text_setting_notify_comment_1">Over 220 ppb / First Alert / Remind Once an hour</string>
    <string name="text_setting_notify_comment_2">Over 660 ppb / First Alert / Remind Once 10 mins</string>
    <string name="text_setting_history">History</string>
    <string name="text_setting_history_clean">Erase</string>
    <string name="text_setting_history_export">Export</string>
    <string name="text_setting_allow_in_background">允許APP在背景執行</string>
    <string name="text_navi_q_and_a">Q and A</string>
    <string name="text_navi_tour">Guide Tour</string>
    <string name="account_Login">Sign In</string>
    <string name="login">Sign in</string>
    <string name="enter_Password">Password</string>
    <string name="forget_Password">Forgot password?</string>
    <string name="forget_Check_Password_Title">Forgot-Change password</string>
    <string name="change_Password">Change password?</string>
    <string name="check_Password">Enter new password</string>
    <string name="double_check_Password">Confirm your password</string>
    <string name="no_Account">No account? </string>
    <string name="create_New_account">Create a new account</string>
    <string name="create_Account">Create Account</string>
    <string name="enter_Email">Please enter your e-mail</string>
    <string name="next_Step">Next</string>
    <string name="enter_Verification_code">Enter Verification Code</string>
    <string name="cannot_Receive_mail">Did not get mail?</string>
    <string name="resend_Mail">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="active">Active</string>
    <string name="logout">Sign out</string>
    <string name="nick_Name">Username : </string>
    <string name="email">Email : </string>
    <string name="edit">Edit</string>
    <string name="rememberID">Remember user ID</string>
    <string name="title_tvoc">TVOC_Data</string>
    <string name="title_eco2">Eco2_Data</string>
    <string name="title_humidy">Humidity_Data</string>
    <string name="title_pm25">PM2.5</string>
    <string name="text_navi_personal">Personal trail</string>
</resources>