<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add_device"
            android:visible="true"
            android:title="@string/text_navi_add_device" />
        <item
            android:id="@+id/nav_disconnect_device"
            android:visible="false"
            android:title="@string/UART_Disconnecting" />
    </group>

    <group
        android:id="@+id/group_9"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_accountManagement"
            android:title="@string/text_navi_accountManagement" />
    </group>

    <group
        android:id="@+id/group_10"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_personal_map"
            android:title="@string/text_navi_personal" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_air_map"
            android:visible="true"
            android:title="@string/text_navi_air_map" />
    </group>

    <group
        android:id="@+id/group_3"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_knowledge"
            android:title="@string/text_navi_knowledge" />
    </group>

    <group
        android:id="@+id/group_5"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_qanda"
            android:title="@string/text_navi_q_and_a" />
    </group>

    <group
        android:id="@+id/group_4"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:title="@string/text_navi_about" />
    </group>

    <group
        android:id="@+id/group_6"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_tour"
            android:visible="true"
            android:title="@string/text_navi_tour" />
    </group>

    <group
        android:id="@+id/group_8"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_getData"
            android:visible="false"
            android:title="@string/text_navi_getData" />
    </group>
    <group
        android:id="@+id/group_7"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:title="@string/text_navi_setting" />
    </group>
</menu>