<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <!--

        <ImageButton
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:layout_weight="0.14" />

            -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/Web_site"
            android:textColor="@color/blackColor"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/blackColor"
            android:gravity="center_horizontal"
            android:text="@string/MicroJetWeb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Contact_us"
            android:textColor="@color/blackColor"
            android:layout_marginTop="15dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/blackColor"
            android:gravity="center_horizontal"
            android:text="@string/ContactUs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Contact_mail"
            android:textColor="@color/blackColor"
            android:layout_marginTop="15dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/blackColor"
            android:gravity="center_horizontal"
            android:text="@string/CustomerService" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutAppVersion"
            android:gravity="center"
            android:text="@string/show_app_version"
            android:textColor="@color/blackColor"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</LinearLayout>