<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_cloud_green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="31dp">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:text="@string/account_Login"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_input"
            android:ems="10"
            android:hint="@string/enter_Email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_input"
            android:ems="10"
            android:hint="@string/enter_Password"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/rememberID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/rememberID" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/forget_Password"
            android:textColor="@color/hype_Link_Blue" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="#484848"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/no_Account" />

            <TextView
                android:id="@+id/newAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/create_New_account"
                android:textColor="@color/hype_Link_Blue"
                android:textStyle="normal" />
            15:26 白_________________告

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_buttonFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_login_button"
            android:text="@string/login"
            android:textColor="@color/whiteColor" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>