<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChartBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_bg_cloud_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/create_Account"
            android:textSize="26sp"
            android:textStyle="bold"
            android:orientation="vertical"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:hint="@string/enter_Email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>

        <!--android:onClick="click"-->
        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:text="@string/next_Step"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>