<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChangeBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_cloud_green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/change_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:text="@string/forget_Check_Password_Title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/check_Password"
            android:background="@drawable/style_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/check_Password"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/double_Check_password"
            android:background="@drawable/style_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/double_check_Password"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <Button
            android:id="@+id/forget_Change_confirm"
            android:background="@drawable/style_login_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="25dp"
            android:text="@string/confirm"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>