<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChartBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_bg_cloud_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enter_Verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/enter_Verification_code"
            android:textSize="26sp"
            android:textStyle="bold"
            android:orientation="vertical"/>

        <EditText
            android:id="@+id/enter_Verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/enter_Verification_code"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/cannot_Receive_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:text="@string/cannot_Receive_mail"/>

        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resend_Mail"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>